// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing Monkis component should snapshot works with english language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <div
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary Component-root Component-root mui-fixed MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular WithStyles(ForwardRef(Toolbar))-root"
      >
        <div
          class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
        >
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="button-header-logo"
            title="To main page"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-colorPrimary"
              href="/front/credentials"
            >
              <img
                alt="Header logo"
                class="img-root img-root"
                src=""
              />
            </a>
          </div>
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root"
          >
            <button
              aria-controls="menu"
              aria-haspopup="true"
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              data-testid="header-menu"
              tabindex="0"
              title="Menu"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  class="MuiBadge-root Component-root Component-root"
                  data-testid="badge-notifications"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary MuiBadge-invisible"
                  >
                    0
                  </span>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              aria-hidden="true"
              class="MuiPopover-root WithStyles(ForwardRef(Popover))-root"
              data-testid="popover-invisible-div"
              id="menu"
              role="presentation"
              style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
            >
              <div
                data-test="sentinelStart"
                tabindex="0"
              />
              <div
                class="MuiPaper-root MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style="opacity: 0; transform: scale(0.75, 0.5625); visibility: hidden;"
                tabindex="-1"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root Component-root Component-root"
                  >
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Username
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      testecrudcredential
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Server
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      http://sso:3000
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Expires at
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      15/06/2020 11:39
                    </p>
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root Component-root Component-root"
                      >
                        <button
                          aria-label="Portuguese"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-portuguese"
                          tabindex="0"
                          title="Portuguese"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Brasil flag"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="English"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-english"
                          tabindex="0"
                          title="English"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="United Kingdom flag"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Spanish"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-spanish"
                          tabindex="0"
                          title="Spanish"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Spain flag"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiList-root ForwardRef(MenuList)-root MuiList-padding"
                  role="menu"
                  tabindex="-1"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-monkis"
                    href="/front/monkis"
                    role="menuitem"
                    style="pointer-events: auto;"
                    tabindex="0"
                  >
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                      title=""
                    >
                      <div
                        class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 2v11h3v9l7-12h-4l4-8z"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                      >
                        <span
                          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                        >
                          My monkis
                        </span>
                      </div>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-settings"
                    href="/front/settings"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Account settings
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <li
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="logout"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Logout
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </li>
                </ul>
              </div>
              <div
                data-test="sentinelEnd"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
  >
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root"
    >
      <h6
        class="MuiTypography-root Component-root Component-root MuiTypography-h6"
      >
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          List of Monkis
          <button
            class="MuiButtonBase-root MuiIconButton-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="iconbutton-filter-extension"
            tabindex="0"
            title="Filter extension"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
              >
                <p
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  ALL
                </p>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </h6>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-container MuiGrid-spacing-xs-2"
        >
          <div
            class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
          >
            <div
              class="MuiBox-root MuiBox-root Component-root Component-root"
            >
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
                data-testid="box-monki-extension-0"
              >
                JAVASCRIPT
              </div>
            </div>
            <div
              class="MuiPaper-root Component-root Component-root MuiPaper-outlined MuiPaper-rounded"
              data-testid="paper-monki-0"
            >
              <p
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                data-testid="typography-monkis-list-name-0"
              >
                <span
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  Monki:
                </span>
                monki1
              </p>
              <p
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
              >
                <span
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  Version:
                </span>
                1
              </p>
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
              >
                <div
                  class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <button
                      aria-label="Visibility"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
                      data-testid="button-monki-show-code-0"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiBox-root MuiBox-root Component-root Component-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <a
                      aria-disabled="false"
                      aria-label="Edit"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
                      data-testid="button-monki-edit-0"
                      href="/front/monki/19"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiBox-root MuiBox-root Component-root Component-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
          >
            <div
              class="MuiBox-root MuiBox-root Component-root Component-root"
            >
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
                data-testid="box-monki-extension-1"
              >
                PHP
              </div>
            </div>
            <div
              class="MuiPaper-root Component-root Component-root MuiPaper-outlined MuiPaper-rounded"
              data-testid="paper-monki-1"
            >
              <p
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                data-testid="typography-monkis-list-name-1"
              >
                <span
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  Monki:
                </span>
                monki2
              </p>
              <p
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
              >
                <span
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  Version:
                </span>
                2
              </p>
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
              >
                <div
                  class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <button
                      aria-label="Visibility"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
                      data-testid="button-monki-show-code-1"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiBox-root MuiBox-root Component-root Component-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <a
                      aria-disabled="false"
                      aria-label="Edit"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
                      data-testid="button-monki-edit-1"
                      href="/front/monki/20"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiBox-root MuiBox-root Component-root Component-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root mui-fixed"
    >
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root MuiTypography-colorPrimary"
        data-testid="link-new-monki"
        href="/front/new_monki"
        title="Create Monki"
      >
        <img
          alt="Create Monki"
          class="img-root img-root"
          src=""
        />
      </a>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
      data-testid="iconButton-monkis-help-button"
      tabindex="0"
      title="Help button"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`testing Monkis component should snapshot works with portuguese language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <div
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary Component-root Component-root mui-fixed MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular WithStyles(ForwardRef(Toolbar))-root"
      >
        <div
          class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
        >
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="button-header-logo"
            title="Para página principal"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-colorPrimary"
              href="/front/credentials"
            >
              <img
                alt="Header logo"
                class="img-root img-root"
                src=""
              />
            </a>
          </div>
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root"
          >
            <button
              aria-controls="menu"
              aria-haspopup="true"
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              data-testid="header-menu"
              tabindex="0"
              title="Menu"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  class="MuiBadge-root Component-root Component-root"
                  data-testid="badge-notifications"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary MuiBadge-invisible"
                  >
                    0
                  </span>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              aria-hidden="true"
              class="MuiPopover-root WithStyles(ForwardRef(Popover))-root"
              data-testid="popover-invisible-div"
              id="menu"
              role="presentation"
              style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
            >
              <div
                data-test="sentinelStart"
                tabindex="0"
              />
              <div
                class="MuiPaper-root MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style="opacity: 0; transform: scale(0.75, 0.5625); visibility: hidden;"
                tabindex="-1"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root Component-root Component-root"
                  >
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Nome de usuário
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      testecrudcredential
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Servidor
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      http://sso:3000
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Expira em
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      15/06/2020 11:39
                    </p>
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root Component-root Component-root"
                      >
                        <button
                          aria-label="Português"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-portuguese"
                          tabindex="0"
                          title="Português"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandeira do Brasil"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Inglês"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-english"
                          tabindex="0"
                          title="Inglês"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandeira do Reino Unido"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Espanhol"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-spanish"
                          tabindex="0"
                          title="Espanhol"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandeira da Espanha"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiList-root ForwardRef(MenuList)-root MuiList-padding"
                  role="menu"
                  tabindex="-1"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-monkis"
                    href="/front/monkis"
                    role="menuitem"
                    style="pointer-events: auto;"
                    tabindex="0"
                  >
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                      title=""
                    >
                      <div
                        class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 2v11h3v9l7-12h-4l4-8z"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                      >
                        <span
                          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                        >
                          Meus monkis
                        </span>
                      </div>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-settings"
                    href="/front/settings"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Configurações da conta
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <li
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="logout"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Encerrar sessão
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </li>
                </ul>
              </div>
              <div
                data-test="sentinelEnd"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
  >
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root"
    >
      <h6
        class="MuiTypography-root Component-root Component-root MuiTypography-h6"
      >
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          Lista de Monkis
          <button
            class="MuiButtonBase-root MuiIconButton-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="iconbutton-filter-extension"
            tabindex="0"
            title="Filtrar extensão"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
              >
                <p
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  ALL
                </p>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </h6>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-container MuiGrid-spacing-xs-2"
        >
          <div
            class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
          >
            <div
              class="MuiBox-root MuiBox-root Component-root Component-root"
            >
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
                data-testid="box-monki-extension-0"
              >
                JAVASCRIPT
              </div>
            </div>
            <div
              class="MuiPaper-root Component-root Component-root MuiPaper-outlined MuiPaper-rounded"
              data-testid="paper-monki-0"
            >
              <p
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                data-testid="typography-monkis-list-name-0"
              >
                <span
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  Monki:
                </span>
                monki1
              </p>
              <p
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
              >
                <span
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  Versão:
                </span>
                1
              </p>
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
              >
                <div
                  class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <button
                      aria-label="Visibility"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
                      data-testid="button-monki-show-code-0"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiBox-root MuiBox-root Component-root Component-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <a
                      aria-disabled="false"
                      aria-label="Edit"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
                      data-testid="button-monki-edit-0"
                      href="/front/monki/19"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiBox-root MuiBox-root Component-root Component-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
          >
            <div
              class="MuiBox-root MuiBox-root Component-root Component-root"
            >
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
                data-testid="box-monki-extension-1"
              >
                PHP
              </div>
            </div>
            <div
              class="MuiPaper-root Component-root Component-root MuiPaper-outlined MuiPaper-rounded"
              data-testid="paper-monki-1"
            >
              <p
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                data-testid="typography-monkis-list-name-1"
              >
                <span
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  Monki:
                </span>
                monki2
              </p>
              <p
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
              >
                <span
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  Versão:
                </span>
                2
              </p>
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
              >
                <div
                  class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <button
                      aria-label="Visibility"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
                      data-testid="button-monki-show-code-1"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiBox-root MuiBox-root Component-root Component-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <a
                      aria-disabled="false"
                      aria-label="Edit"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
                      data-testid="button-monki-edit-1"
                      href="/front/monki/20"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiBox-root MuiBox-root Component-root Component-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root mui-fixed"
    >
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root MuiTypography-colorPrimary"
        data-testid="link-new-monki"
        href="/front/new_monki"
        title="Criar Monki"
      >
        <img
          alt="Criar Monki"
          class="img-root img-root"
          src=""
        />
      </a>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
      data-testid="iconButton-monkis-help-button"
      tabindex="0"
      title="Botão de ajuda"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`testing Monkis component should snapshot works with spanish language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <div
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary Component-root Component-root mui-fixed MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular WithStyles(ForwardRef(Toolbar))-root"
      >
        <div
          class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
        >
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="button-header-logo"
            title="A la página principal"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-colorPrimary"
              href="/front/credentials"
            >
              <img
                alt="Header logo"
                class="img-root img-root"
                src=""
              />
            </a>
          </div>
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root"
          >
            <button
              aria-controls="menu"
              aria-haspopup="true"
              aria-label="Menu"
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              data-testid="header-menu"
              tabindex="0"
              title="Menu"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  class="MuiBadge-root Component-root Component-root"
                  data-testid="badge-notifications"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary MuiBadge-invisible"
                  >
                    0
                  </span>
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              aria-hidden="true"
              class="MuiPopover-root WithStyles(ForwardRef(Popover))-root"
              data-testid="popover-invisible-div"
              id="menu"
              role="presentation"
              style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
            >
              <div
                data-test="sentinelStart"
                tabindex="0"
              />
              <div
                class="MuiPaper-root MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style="opacity: 0; transform: scale(0.75, 0.5625); visibility: hidden;"
                tabindex="-1"
              >
                <div
                  class="MuiBox-root MuiBox-root Component-root Component-root"
                >
                  <div
                    class="MuiBox-root MuiBox-root Component-root Component-root"
                  >
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Nombre de usuario
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      testecrudcredential
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Servidor
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1 MuiTypography-noWrap"
                    >
                      http://sso:3000
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      Expira a las
                    </p>
                    <p
                      class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                    >
                      15/06/2020 11:39
                    </p>
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root"
                    >
                      <div
                        class="MuiBox-root MuiBox-root Component-root Component-root"
                      >
                        <button
                          aria-label="Portugués"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-portuguese"
                          tabindex="0"
                          title="Portugués"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandera de Brasil"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Inglés"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-english"
                          tabindex="0"
                          title="Inglés"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandera del Reino Unido"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Español"
                          class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                          data-testid="change-language-spanish"
                          tabindex="0"
                          title="Español"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <img
                              alt="Bandera de España"
                              class="img-root img-root"
                              src=""
                            />
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiList-root ForwardRef(MenuList)-root MuiList-padding"
                  role="menu"
                  tabindex="-1"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-monkis"
                    href="/front/monkis"
                    role="menuitem"
                    style="pointer-events: auto;"
                    tabindex="0"
                  >
                    <div
                      class="MuiBox-root MuiBox-root Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
                      title=""
                    >
                      <div
                        class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 2v11h3v9l7-12h-4l4-8z"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                      >
                        <span
                          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                        >
                          Mis monkis
                        </span>
                      </div>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="menuitem-settings"
                    href="/front/settings"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Configuraciones de la cuenta
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <li
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-testid="logout"
                    role="menuitem"
                    tabindex="-1"
                  >
                    <div
                      class="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Deslogar
                      </span>
                    </div>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </li>
                </ul>
              </div>
              <div
                data-test="sentinelEnd"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
  >
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root"
    >
      <h6
        class="MuiTypography-root Component-root Component-root MuiTypography-h6"
      >
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          Lista de Monkis
          <button
            class="MuiButtonBase-root MuiIconButton-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="iconbutton-filter-extension"
            tabindex="0"
            title="Filtrar extensión"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
              >
                <p
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  ALL
                </p>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </h6>
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-container MuiGrid-spacing-xs-2"
        >
          <div
            class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
          >
            <div
              class="MuiBox-root MuiBox-root Component-root Component-root"
            >
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
                data-testid="box-monki-extension-0"
              >
                JAVASCRIPT
              </div>
            </div>
            <div
              class="MuiPaper-root Component-root Component-root MuiPaper-outlined MuiPaper-rounded"
              data-testid="paper-monki-0"
            >
              <p
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                data-testid="typography-monkis-list-name-0"
              >
                <span
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  Monki:
                </span>
                monki1
              </p>
              <p
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
              >
                <span
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  versión:
                </span>
                1
              </p>
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
              >
                <div
                  class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <button
                      aria-label="Visibility"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
                      data-testid="button-monki-show-code-0"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiBox-root MuiBox-root Component-root Component-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <a
                      aria-disabled="false"
                      aria-label="Edit"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
                      data-testid="button-monki-edit-0"
                      href="/front/monki/19"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiBox-root MuiBox-root Component-root Component-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
          >
            <div
              class="MuiBox-root MuiBox-root Component-root Component-root"
            >
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
                data-testid="box-monki-extension-1"
              >
                PHP
              </div>
            </div>
            <div
              class="MuiPaper-root Component-root Component-root MuiPaper-outlined MuiPaper-rounded"
              data-testid="paper-monki-1"
            >
              <p
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                data-testid="typography-monkis-list-name-1"
              >
                <span
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  Monki:
                </span>
                monki2
              </p>
              <p
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
              >
                <span
                  class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                >
                  versión:
                </span>
                2
              </p>
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
              >
                <div
                  class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <button
                      aria-label="Visibility"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
                      data-testid="button-monki-show-code-1"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiBox-root MuiBox-root Component-root Component-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <a
                      aria-disabled="false"
                      aria-label="Edit"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
                      data-testid="button-monki-edit-1"
                      href="/front/monki/20"
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiBox-root MuiBox-root Component-root Component-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root mui-fixed"
    >
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root MuiTypography-colorPrimary"
        data-testid="link-new-monki"
        href="/front/new_monki"
        title="Crear Monki"
      >
        <img
          alt="Crear Monki"
          class="img-root img-root"
          src=""
        />
      </a>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
      data-testid="iconButton-monkis-help-button"
      tabindex="0"
      title="Boton de ayuda"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
